[package]
name = "forpath3"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
zhscript2 = {version = "4.6.6", path = "../../zhscript2-rust", features = ["thread"]}
zhscript2_util = {version = "0.2.0", path = "../util"}
structopt = "0.3.26"
walkdir = "2.3.2"
scoped_threadpool = "0.1.9"
num_cpus = "1.13.1"
blake3 = "0.3.8"
fnv = "1.0.7"
unbytify = "0.2.0"
regex = "1.5.6"
glob = "0.3.0"

[profile.release]
lto = true
strip = true

